--- a/index.html
+++ b/index.html
@@ -13,6 +13,31 @@
             overflow-x: hidden;
         }
 
+        /* Cisco Logo */
+        .cisco-logo-container {
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+
+        .cisco-logo {
+            font-size: 4rem;
+            font-weight: 700;
+            background: linear-gradient(135deg, var(--cisco-blue) 0%, var(--cisco-blue-light) 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            letter-spacing: 0.1em;
+            font-family: 'Arial Black', sans-serif;
+        }
+
+        .cisco-tagline {
+            color: var(--text-secondary);
+            font-size: 0.9rem;
+            margin-top: 0.5rem;
+            letter-spacing: 0.2em;
+            text-transform: uppercase;
+        }
+
         /* Hero Section */
         .hero-section {
             background: linear-gradient(135deg, #000 0%, #0a0a0a 100%);
@@ -402,7 +427,11 @@
         <!-- Hero Section -->
         <section class="hero-section">
             <div class="hero-content">
-                <h1 class="hero-title">Cisco AI Cloud Management Platform</h1>
+                <div class="cisco-logo-container">
+                    <div class="cisco-logo">CISCO</div>
+                    <div class="cisco-tagline">Powering AI Infrastructure</div>
+                </div>
+                <h1 class="hero-title">AI Cloud Management Platform</h1>
                 <p class="hero-subtitle">
                     Enterprise-Grade GPU Infrastructure & AI Services on Demand
                     <br>Scale Your AI Workloads with Confidence
