Add GPU management by model - NVIDIA (6 models: H200, H100, B200, A100, L40S, L4) and AMD (4 models: MI300X, MI300A, MI250X, MI210) with 45 total GPUs

--- a/csp-admin.html
+++ b/csp-admin.html
@@ -394,9 +394,36 @@
                     </div>
                 </div>
 
+                <!-- NVIDIA GPUs by Model -->
+                <div class="card mb-lg">
+                    <div class="card-header">
+                        <h3 class="card-title">
+                            <i class="fas fa-microchip" style="color: #76b900;"></i>
+                            NVIDIA GPUs by Model
+                        </h3>
+                    </div>
+                    <div id="nvidiaModelGrid" style="padding: 1.5rem;"></div>
+                </div>
+
+                <!-- AMD GPUs by Model -->
+                <div class="card mb-lg">
+                    <div class="card-header">
+                        <h3 class="card-title">
+                            <i class="fas fa-microchip" style="color: #ed1c24;"></i>
+                            AMD GPUs by Model
+                        </h3>
+                    </div>
+                    <div id="amdModelGrid" style="padding: 1.5rem;"></div>
+                </div>
+
+                <!-- All GPUs Detailed View -->
                 <div class="card">
                     <div class="card-header">
-                        <h3 class="card-title">All GPUs</h3>
+                        <h3 class="card-title">All GPUs - Detailed View</h3>
+                        <button class="btn btn-secondary btn-sm" onclick="toggleGPUView()">
+                            <i class="fas fa-list"></i>
+                            Toggle View
+                        </button>
                     </div>
                     <div class="gpu-grid" id="gpuGrid"></div>
                 </div>
